--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,3 @@
-/*
-display: flex;
-  display: -ms-flexbox; /* IE 10 
-  flex-wrap: wrap;
-  -ms-flex-wrap: wrap; /* IE 10 
-  padding: 0 2px; */
-
-
 * { margin: 0; padding: 0; }
 
 body, html {
@@ -25,7 +17,7 @@ body, html {
 
   /* The image used as background - Photo by Ioann Peshkov on Unsplash */
   background-image: url("../images/ioann-peshkov-Eo0aGGY3PWI-unsplash.jpg");
-  opacity: 1; /* 1 */
+  opacity: 1; /* or 0.9 */
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -40,13 +32,17 @@ body, html {
 #caption {
   width: 100%;
   height: auto;
-  padding: 5% 0;
+  padding: 7% 0;
   background: transparent;
 }
 
 .flex-container {
   display: flex;
+  display: -ms-flexbox; /* IE 10 */
+
   flex-wrap: nowrap;
+  -ms-flex-wrap: wrap; /* IE 10 */
+
   justify-content: center;
   background: transparent;
 
@@ -61,7 +57,7 @@ body, html {
   text-align: center;
   background-color: whitesmoke;
   opacity: 0.5;
-  font-size: 70px;
+  font-size: 65px;
 }
 
 .flex-container > .flex-caption {
@@ -71,7 +67,7 @@ body, html {
   text-align: center;
   background-color: whitesmoke;
   opacity: 0.5;
-  font-size: 20px;
+  font-size: 22px;
 }
 
 #timeToDate, #todayIsDate {
@@ -90,7 +86,6 @@ body, html {
 h1 {
   font-size: 60px;
   font-weight: 300;
-  padding: 0 5%; /* for small devices only */
 }
 
 p {
@@ -105,11 +100,11 @@ p {
   width: 100%;
   height: auto;
   max-height: 7%;
+  padding: 0.5% 0;
   background-color: #fff;
   opacity: 0.9;
   color: #000;
   font-size: 14px;
-  padding: 0.5% 0;
 }
 
 a:link {
@@ -131,8 +126,192 @@ a:active {
   text-decoration: underline;
 }
 
-/* Responsive layout: Tablet 
-@media screen and (max-width: 768px) {} */
+/* Responsive layout: Desktop */
+@media screen and (max-width: 1280px) {
 
-/* Responsive layout: Smartphone 
-@media screen and (max-width: 320px) {} */
+  #caption {
+    padding: 10% 0; 
+  }
+
+  .flex-container > .flex-item {
+    font-size: 55px;
+  }
+
+  .flex-container > .flex-caption {
+    font-size: 18px;
+  }
+
+}
+
+/* Responsive layout: Large Tablet - landscape */ 
+@media screen and (max-width: 1024px) {
+
+  #caption {
+    padding: 12% 0;
+  }
+
+  .flex-container > .flex-item {
+    width: 20%; 
+    margin: 0 15px; 
+    font-size: 55px;
+  }
+
+  .flex-container > .flex-caption {
+    width: 20%;
+    margin: 0 15px;
+    font-size: 18px;
+  }
+
+  #currentDate {
+    font-size: 24px;
+  }
+
+  h1 {
+    font-size: 55px;
+  }
+
+  #footer {
+    font-size: 16px;
+  }
+  
+}
+
+/* Responsive layout: Tablet */
+@media screen and (max-width: 768px) {
+
+  .flex-container > .flex-item {
+    width: 20%; 
+    margin: 0 10px; 
+    font-size: 45px;
+  }
+
+  .flex-container > .flex-caption {
+    width: 20%;
+    margin: 0 10px;
+    font-size: 16px;
+  }
+
+  #currentDate {
+    font-size: 22px;
+  }
+
+  h1 {
+    font-size: 50px;
+    padding: 0 10%; 
+  }
+
+} 
+
+/* Responsive layout: Small Tablet - Portrait */
+@media screen and (max-width: 600px) {
+
+  #caption {
+    padding: 20% 0;
+  }
+
+  .flex-container {
+    height: 12%;
+  }
+
+  .flex-container > .flex-item {
+    width: 25%; 
+    margin: 0 2px; 
+    font-size: 40px;
+  }
+
+  .flex-container > .flex-caption {
+    width: 25%;
+    margin: 0 2px;
+    font-size: 14px;
+  }
+
+  #currentDate {
+    font-size: 20px;
+  }
+
+  h1 {
+    font-size: 48px;
+    padding: 0 20%; 
+  }
+
+  #footer {
+    font-size: 14px;
+  }
+
+}
+
+/* Responsive layout: Smartphone - Portrait + Landscape */
+@media screen and (max-width: 480px) {
+
+  #caption {
+    padding: 30% 0;
+  }
+
+  .flex-container {
+    height: 10%;
+  }
+
+  .flex-container > .flex-item {
+    width: 25%; 
+    margin: 0 2px; 
+    font-size: 26px;
+  }
+
+  .flex-container > .flex-caption {
+    width: 25%;
+    margin: 0 2px;
+    font-size: 12px;
+  }
+
+  #currentDate {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 36px;
+    padding: 0 20%; 
+  }
+
+  #footer {
+    font-size: 14px;
+  }
+
+}
+
+/* Responsive layout: Small Smartphone */
+@media screen and (max-width: 320px) {
+
+  #caption {
+    padding: 20% 0;
+  }
+
+  .flex-container {
+    height: 10%;
+  }
+
+  .flex-container > .flex-item {
+    width: 25%;
+    margin: 0 2px; 
+    font-size: 24px;
+  }
+
+  .flex-container > .flex-caption {
+    width: 25%;
+    margin: 0 2px;
+    font-size: 8px;
+  }
+
+  #currentDate {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 32px; /* ? */
+    padding: 0 20%; 
+  }
+
+  #footer {
+    font-size: 14px;
+  }
+
+} 
